feat: add warnings to Provider status (#534)
* feat: add warnings to Provider status

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* chore: refactor with suggested changes

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

---------

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>